[Feat] DistGER-training-by-cuda - 2023/9/7
1. implement train by cuda
2. train overleaps randwalk
3. verify AUC achives 0.9499 for ytb in 3 iters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,11 +32,18 @@ endif()
 #     set(GTEST_LIBRARIES "gtest" "gtest_main")
 # endif()
 
+find_package(CUDA REQUIRED)
+set(CMAKE_CUDA_COMPILER nvcc)
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} ${MPI_CXX_COMPILE_FLAGS} -ccbin mpic++")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MPI_CXX_LINK_FLAGS}")
+
 #use c++11
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++0x -O3 -D USE_MKL")
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++0x ")
 message("${CMAKE_CXX_FLAGS}")
+
+
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${DGER_RUNTIME_OUTPUT_DIRECTORY})
 
